--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,9 @@ docs/_build/
 # PyBuilder
 target/
 
-# Jupyter Notebook checkpoints
+# Jupyter Notebook and checkpoints
 .ipynb_checkpoints
+*.ipynb
 
 # PyCharm
 .idea
